src/com/company/mainWindow.css
.root{
    -fx-background-color: #666666;
    -fx-border-color: black;
    -fx-font: 12 'Bookshelf Symbol 7';
}

.paneStyle-Light {
    -fx-background-color: #707070;
    -fx-border-style: solid solid none solid;
    -fx-border-width: 1;
    -fx-border-color: #808080;
}

.paneStyle-notDark {
    -fx-background-color: #707070;
     -fx-border-style: solid solid none solid;
     -fx-border-width: 1;
    -fx-border-color: #808080;
}

.Button {
      -fx-background-color: #4d4d4d;
      -fx-text-fill: white;
}

.paneStyle-Dark {
    -fx-background-color: #303030;
    -fx-border-style: solid solid none solid;
    -fx-border-width: 1;
    -fx-border-color: #404040;
}

.ClassHeader {
    -fx-font: 20 'Bookshelf Symbol 7';
    -fx-text-fill: red;
}

.LabelHeader {
    -fx-font: 20 'Bookshelf Symbol 7';
}

.LabelPanes {
    -fx-font: 14 'Bookshelf Symbol 7';
    -fx-text-fill: red;
}

.LabelClass {
    -fx-font: 18 'Bookshelf Symbol 7';
    -fx-text-alignment: center;
}


.ButtonPanelAnimal {
    -fx-background-color: #888888;
    -fx-font: 14 'Bookshelf Symbol 7';
}

.Panes {
        -fx-border-style: solid solid none solid;
        -fx-border-width: 1;
        -fx-border-color: white;
  }
.PanesLast {
        -fx-border-style: none none none solid;
        -fx-border-width: 1;
        -fx-border-color: white;}
}

